# a-ceoh-evolution-of-heuristics

./: LICENSE  README.md  pyproject.toml  run_experiments.py  setup.sh  stats_analysis
data/mr_experiment_instances/: 10x10_100_edu.json  20x20_200_edu.json  20x20_300_edu.json
data/puzzle/: 10x10_200_edu.json  10x10_300_edu.json  20x20_100_edu.json  30x30_100_edu.json  30x30_200_edu.json  30x30_300_edu.json
docs/samples/: sample_env
multibay-reshuffling-artifact_evostar_2026/: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE
multibay-reshuffling-artifact_evostar_2026/data/eoh_experiment_config/: README.md
multibay-reshuffling-artifact_evostar_2026/data/mr_examples/: layout_generator.py
multibay-reshuffling-artifact_evostar_2026/docs/samples/: sample_experiment
multibay-reshuffling-artifact_evostar_2026/src/util/: vrp_visualizer.py
multibay-reshuffling-artifact_evostar_2026/src/util/debug/: instance_loading.ipynb
src/problems/multibay_reshuffeling/bay/: access_bay.py  access_point.py  sink.py  source.py  virtual_lane.py  warehouse.py
src/problems/multibay_reshuffeling/convert_to_virtual_lanes/: network_flow_model.py  network_flow_model_multi_or.py
src/problems/multibay_reshuffeling/examples_gen/: rand_lane_gen.py  unit_load.py  unit_load_gen.py
src/problems/multibay_reshuffeling/instance_loader/: instance.py
src/problems/multibay_reshuffeling/mr_util/: layout_to_bays.py  search_move_sequence.py
src/solver/ceoh/: __main__.py  eoh.py
src/util/: mr_to_ceoh_util.py  paths_util.py
src/util/debug/: test_ceoh_heuristics.ipynb  test_ceoh_rf.ipynb
(+76 files in other folders)
